office-service/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: office-service
  namespace: office-test
spec:
  type: NodePort
  selector:
    app: office-service
  ports:
    - port: 80
      targetPort: 80
