office-service/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "office-ingress"
  namespace: office-prod

spec:
  rules:
    - host:
      http:
        paths:
          - path: /office
            backend:
              serviceName: office-service
              servicePort: 80
